# nyc-visibility-atlas

./: .gitignore  .project-root  CONTRIBUTING.md  FINDINGS.md  LICENSE  METHODOLOGY.md  Makefile  README.md  environment.lock.yml  environment.yml  pyproject.toml
.claude/: settings.local.json
configs/: atlas.yml  data_inventory.yml  params.yml  sources.yml  strata.yml
data/raw/: .gitkeep  ACQUISITION.md  _manifest.json
data/raw/chs/: chs_indicators.csv  chs_indicators_epiquery.csv  diabetes_indicators.csv
data/raw/chs/epiquery_exports/: README.md  chs_asthma_2019.csv  chs_binge_2019.csv  chs_diabetes_2019.csv  chs_fluvax_2019.csv  chs_highbp_2019.csv  chs_obesity_2019.csv  chs_smoking_2019.csv  chs_uninsured_2019.csv  demographic_export_instructions.md  epiquery_manifest.json
data/raw/geo/: nyc_tracts_2020_v2.geojson  nyc_zctas_2020.geojson  uhf34_boundaries.geojson  uhf42_boundaries.geojson
data/raw/vital/epiquery_exports/: README.md  epiquery_manifest.json
logs/: .gitkeep
notebooks/: .gitkeep
reports/atlas/: .gitkeep
reports/figures/: .gitkeep
reports/tables/: demographic_visibility_gaps.md  predictor_model_summary.md  vulnerability_priority_list.md
scripts/: 00_build_geographies.py  01_build_crosswalks.py  02_build_denominators_acs.py  02b_build_uhf_nta_crosswalk.py  03_build_numerator_chs.py  04_build_numerator_sparcs.py  04b_build_numerator_sparcs_encounters.py  06_build_numerator_vital.py  07_build_visibility_tables.py  08_build_cross_source_matrix.py  09_typology_clustering.py  10_predictors_and_spatial_diagnostics.py  11_consequence_vulnerability.py  12_atlas_assets.py  13_analyze_demographic_visibility.py  14_robustness_and_policy.py  15_enhanced_sparcs_multiyear.py  16_add_311_civic_layer.py  17_comprehensive_sensitivity.py
src/visibility_atlas/: __init__.py  cli.py  hashing.py  io_utils.py  logging_utils.py  paths.py  qa.py  schemas.py
tests/: conftest.py  test_paths.py  test_schema_validation.py  test_small_numbers_policy.py  test_smoke_pipeline.py
tests/fixtures/: tiny_crosswalk.csv  tiny_visibility.csv
